Selected state is not visible for today cells and rows. Fixes #2796

--- a/styles/web/theme-template.less
+++ b/styles/web/theme-template.less
@@ -665,6 +665,7 @@ textarea.k-textbox:hover,
 .k-ghost-splitbar-horizontal,
 .k-draghandle.k-state-selected:hover,
 .k-scheduler .k-scheduler-toolbar .k-state-selected,
+.k-scheduler .k-today.k-state-selected,
 .k-marquee-color
 {
     color: @selected-text-color;
